moved settings and mapping

--- a/src/config/mapping.json
+++ b/src/config/mapping.json
@@ -96,7 +96,7 @@
             "properties": {
                 "value": { "type": "keyword" },
                 "type": { "type": "keyword" },
-                "probability": { "type": "float" }
+                "probability": { "type": "half_float" }
             }
         },
         "links": {
